...
        AlertDialog(
            modifier = Modifier.padding(5.dp).width(250.dp),
            onDismissRequest = { showDeleteVertex.value = false },
            title = {
                Text(
                    text = "Vertex",
                    modifier = Modifier.testTag("deleteVertexDialogTitle"),
                )
            },
            text = {
                Column {
                    OutlinedTextField(
                        value = vertex.value ?: "",
                        onValueChange = {
                            vertex.value = it
                            viewModel.setVertex(it)
                        },
                        label = { Text("Vertex") },
                        modifier = Modifier.fillMaxWidth().padding(bottom = 8.dp).testTag("vertexNameInput"),
                    )
                }
            },
            confirmButton = {
                Button(
                    onClick = {
...
