...
                onClick = {
                    showSQLiteSaveUploadButton.value = !showSQLiteSaveUploadButton.value
                    if (showSQLiteSaveUploadButton.value) {
                        showNeo4jSaveUploadButton.value = false
                    }
                },
                modifier = Modifier.fillMaxWidth().testTag("sqliteSectionButton"),
            ) {
                Text("SQLite")
            }
            Button(
                onClick = {
                    showNeo4jScreen.value = true
...
                        modifier = Modifier.fillMaxWidth().testTag("sqliteOpenAsButton"),
                    ) {
                        Text("Open as")
                    }
                    Button(
                        onClick = { viewModel.openSaveAsSQLiteDialog() },
                        modifier = Modifier.fillMaxWidth().testTag("sqliteSaveAsButton"),
                    ) {
                        Text("Save as")
                    }
                    Button(
                        onClick = { viewModel.saveToCurrentSQLiteFile() },
                        enabled = viewModel.currentSQLiteDbPath.value != null,
...
